bindings/c/whiteout_m3.h

typedef struct whiteout_M3ParticleEmitter whiteout_M3ParticleEmitter;
typedef struct whiteout_M3AnimRefVector3f whiteout_M3AnimRefVector3f;
void whiteout_m3_M3ParticleEmitter_set_flipbookStartInitIndex(whiteout_M3ParticleEmitter* self, uint8_t value);
/* Flipbook start stop frame index */
uint8_t whiteout_m3_M3ParticleEmitter_get_flipbookStartStopIndex(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_flipbookStartStopIndex(whiteout_M3ParticleEmitter* self, uint8_t value);
/* Flipbook end initial frame index */
uint8_t whiteout_m3_M3ParticleEmitter_get_flipbookEndInitIndex(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_flipbookEndInitIndex(whiteout_M3ParticleEmitter* self, uint8_t value);
/* Flipbook end stop frame index */
uint8_t whiteout_m3_M3ParticleEmitter_get_flipbookEndStopIndex(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_flipbookEndStopIndex(whiteout_M3ParticleEmitter* self, uint8_t value);
/* Flipbook midpoint time (0–1) */
float whiteout_m3_M3ParticleEmitter_get_flipbookMidTime(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_flipbookMidTime(whiteout_M3ParticleEmitter* self, float value);
/* Flipbook grid columns */
uint16_t whiteout_m3_M3ParticleEmitter_get_flipbookColumns(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_flipbookColumns(whiteout_M3ParticleEmitter* self, uint16_t value);
/* Flipbook grid rows */
uint16_t whiteout_m3_M3ParticleEmitter_get_flipbookRows(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_flipbookRows(whiteout_M3ParticleEmitter* self, uint16_t value);
/* Column fraction (v12+) */
float whiteout_m3_M3ParticleEmitter_get_flipbookColumnFraction(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_flipbookColumnFraction(whiteout_M3ParticleEmitter* self, float value);
/* Row fraction (v12+) */
float whiteout_m3_M3ParticleEmitter_get_flipbookRowFraction(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_flipbookRowFraction(whiteout_M3ParticleEmitter* self, float value);
/* Bounce coefficient */
float whiteout_m3_M3ParticleEmitter_get_bounce(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_bounce(whiteout_M3ParticleEmitter* self, float value);
/* Friction coefficient */
float whiteout_m3_M3ParticleEmitter_get_friction(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_friction(whiteout_M3ParticleEmitter* self, float value);
/* Emitter index to spawn on collision (-1 = none) */
int32_t whiteout_m3_M3ParticleEmitter_get_collisionSpawnIndex(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_collisionSpawnIndex(whiteout_M3ParticleEmitter* self, int32_t value);
/* Minimum spawn count on collision */
uint32_t whiteout_m3_M3ParticleEmitter_get_collisionSpawnMin(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_collisionSpawnMin(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Maximum spawn count on collision */
uint32_t whiteout_m3_M3ParticleEmitter_get_collisionSpawnMax(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_collisionSpawnMax(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Spawn probability on collision */
float whiteout_m3_M3ParticleEmitter_get_collisionSpawnChance(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_collisionSpawnChance(whiteout_M3ParticleEmitter* self, float value);
/* Spawn energy transfer */
float whiteout_m3_M3ParticleEmitter_get_collisionSpawnEnergy(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_collisionSpawnEnergy(whiteout_M3ParticleEmitter* self, float value);
/* Die after N bounces */
uint32_t whiteout_m3_M3ParticleEmitter_get_collisionDieBounce(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_collisionDieBounce(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Visual type → shader b_iInstanceType */
int32_t whiteout_m3_M3ParticleEmitter_get_instanceType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_instanceType(whiteout_M3ParticleEmitter* self, int32_t value);
/* Tail length for Tail/Trail types */
float whiteout_m3_M3ParticleEmitter_get_tailLength(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_tailLength(whiteout_M3ParticleEmitter* self, float value);
/* Instance orientation angles */
whiteout_Vector3f* whiteout_m3_M3ParticleEmitter_get_instanceAngle(whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_instanceAngle(whiteout_M3ParticleEmitter* self, const whiteout_Vector3f* value);
/* Instance distance (v17+) */
float whiteout_m3_M3ParticleEmitter_get_instanceDistance(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_instanceDistance(whiteout_M3ParticleEmitter* self, float value);
/* Pitch variation type */
uint32_t whiteout_m3_M3ParticleEmitter_get_pitchType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_pitchType(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Yaw variation type */
uint32_t whiteout_m3_M3ParticleEmitter_get_yawType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_yawType(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Speed variation type */
uint32_t whiteout_m3_M3ParticleEmitter_get_speedType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_speedType(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Size variation type */
uint32_t whiteout_m3_M3ParticleEmitter_get_sizeType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_sizeType(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Alpha variation type */
uint32_t whiteout_m3_M3ParticleEmitter_get_alphaType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_alphaType(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Color variation type */
uint32_t whiteout_m3_M3ParticleEmitter_get_colorType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_colorType(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Rotation variation type */
uint32_t whiteout_m3_M3ParticleEmitter_get_rotationType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_rotationType(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Horizontal variation type */
uint32_t whiteout_m3_M3ParticleEmitter_get_horizontalType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_horizontalType(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Vertical variation type */
uint32_t whiteout_m3_M3ParticleEmitter_get_verticalType(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_verticalType(whiteout_M3ParticleEmitter* self, uint32_t value);
/* Main particle flags */
int32_t whiteout_m3_M3ParticleEmitter_get_flags(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_flags(whiteout_M3ParticleEmitter* self, int32_t value);
/* Rotation flags (v18+) */
int32_t whiteout_m3_M3ParticleEmitter_get_rotationFlags(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_rotationFlags(whiteout_M3ParticleEmitter* self, int32_t value);
int32_t whiteout_m3_M3ParticleEmitter_get_colorSmoothing(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_colorSmoothing(whiteout_M3ParticleEmitter* self, int32_t value);
int32_t whiteout_m3_M3ParticleEmitter_get_sizeSmoothing(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_sizeSmoothing(whiteout_M3ParticleEmitter* self, int32_t value);
int32_t whiteout_m3_M3ParticleEmitter_get_rotationSmoothing(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_rotationSmoothing(whiteout_M3ParticleEmitter* self, int32_t value);
/* Spline control points (SVC3) */
size_t whiteout_m3_M3ParticleEmitter_get_splineLineData_count(const whiteout_M3ParticleEmitter* self);
whiteout_M3AnimRefVector3f* whiteout_m3_M3ParticleEmitter_get_splineLineData_at(whiteout_M3ParticleEmitter* self, size_t index);
/* Wind influence multiplier */
float whiteout_m3_M3ParticleEmitter_get_windMultiplier(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_windMultiplier(whiteout_M3ParticleEmitter* self, float value);
/* LOD reduction level */
uint32_t whiteout_m3_M3ParticleEmitter_get_lodReduce(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_lodReduce(whiteout_M3ParticleEmitter* self, uint32_t value);
/* LOD cut-off level */
uint32_t whiteout_m3_M3ParticleEmitter_get_lodCut(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_lodCut(whiteout_M3ParticleEmitter* self, uint32_t value);
int32_t whiteout_m3_M3ParticleEmitter_get_trailLinkIndex(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_trailLinkIndex(whiteout_M3ParticleEmitter* self, int32_t value);
/* Trail spawn probability */
float whiteout_m3_M3ParticleEmitter_get_trailChance(const whiteout_M3ParticleEmitter* self);
void whiteout_m3_M3ParticleEmitter_set_trailChance(whiteout_M3ParticleEmitter* self, float value);
/* Linked projector index (-1 = none) */
int32_t whiteout_m3_M3ParticleEmitter_get_splatProjectionIndex(const whiteout_M3ParticleEmitter* self);