bindings/csharp/Whiteout/M3/NativeMethods.M3.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_flipbookStartInitIndex(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m3_M3ParticleEmitter_get_flipbookStartStopIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_flipbookStartStopIndex(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m3_M3ParticleEmitter_get_flipbookEndInitIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_flipbookEndInitIndex(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial byte whiteout_m3_M3ParticleEmitter_get_flipbookEndStopIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_flipbookEndStopIndex(IntPtr self, byte value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_flipbookMidTime(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_flipbookMidTime(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3ParticleEmitter_get_flipbookColumns(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_flipbookColumns(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial ushort whiteout_m3_M3ParticleEmitter_get_flipbookRows(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_flipbookRows(IntPtr self, ushort value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_flipbookColumnFraction(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_flipbookColumnFraction(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_flipbookRowFraction(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_flipbookRowFraction(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_bounce(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_bounce(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_friction(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_friction(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_collisionSpawnIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_collisionSpawnIndex(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_collisionSpawnMin(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_collisionSpawnMin(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_collisionSpawnMax(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_collisionSpawnMax(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_collisionSpawnChance(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_collisionSpawnChance(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_collisionSpawnEnergy(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_collisionSpawnEnergy(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_collisionDieBounce(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_collisionDieBounce(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_instanceType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_instanceType(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_tailLength(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_tailLength(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3ParticleEmitter_get_instanceAngle(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_instanceAngle(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_instanceDistance(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_instanceDistance(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_pitchType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_pitchType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_yawType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_yawType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_speedType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_speedType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_sizeType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_sizeType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_alphaType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_alphaType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_colorType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_colorType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_rotationType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_rotationType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_horizontalType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_horizontalType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_verticalType(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_verticalType(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_rotationFlags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_rotationFlags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_colorSmoothing(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_colorSmoothing(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_sizeSmoothing(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_sizeSmoothing(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_rotationSmoothing(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_rotationSmoothing(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m3_M3ParticleEmitter_get_splineLineData_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3ParticleEmitter_get_splineLineData_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_windMultiplier(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_windMultiplier(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_lodReduce(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_lodReduce(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ParticleEmitter_get_lodCut(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_lodCut(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_trailLinkIndex(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_trailLinkIndex(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3ParticleEmitter_get_trailChance(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ParticleEmitter_set_trailChance(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ParticleEmitter_get_splatProjectionIndex(IntPtr self);
